<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 2017년-->
    <LinearLayout
        android:id="@+id/lv_2017"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_50"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/season_2017"
            android:textColor="@color/grey_550"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <!-- 2018년-->
    <LinearLayout
        android:id="@+id/lv_2018"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_50"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/season_2018"
            android:textColor="@color/grey_550"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <!-- 2019년-->
    <LinearLayout
        android:id="@+id/lv_2019"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_50"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/season_2019"
            android:textColor="@color/grey_550"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <!-- 2020년-->
    <LinearLayout
        android:id="@+id/lv_2020"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_50"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/season_2020"
            android:textColor="@color/grey_550"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>