<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.apx5.apx5.ui.setting.SettingViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- 팀변경-->
                    <LinearLayout
                        android:id="@+id/lyt_change_team"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="vertical"
                        android:padding="@dimen/md_15">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/md_0"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/my_team"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/blue_grey_900"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/md_10"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/tv_team"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:layout_width="@dimen/md_10"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/possible_change_team"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_500" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />

                    <!-- 직관기록 초기화-->
                    <LinearLayout
                        android:id="@+id/lyt_del_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="vertical"
                        android:padding="@dimen/md_15">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/md_0"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/init_all_histories"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/blue_grey_900"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="@dimen/md_10"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="@dimen/md_10"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_all_with_login"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_500" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />

                    <!-- 모든경기저장-->

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/md_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/md_15"
                        android:layout_marginLeft="@dimen/md_15"
                        android:layout_marginTop="@dimen/md_15"
                        android:layout_marginBottom="@dimen/md_10"
                        android:text="@string/app"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_900"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <!-- 버전-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/md_50"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/md_15"
                        android:paddingRight="@dimen/md_15">

                        <TextView
                            android:layout_width="@dimen/md_0"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/version"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_500" />

                        <View
                            android:layout_width="@dimen/md_10"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_500" />

                        <View
                            android:layout_width="@dimen/md_10"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />

                    <!-- 오픈라이선스-->
                    <LinearLayout
                        android:id="@+id/lyt_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/md_50"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/md_15"
                        android:paddingRight="@dimen/md_15">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_license"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_500" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/grey_300" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
