<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.apx5.apx5.ui.statics.StaticsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/md_15"
        android:background="@color/grey_200" >

        <!-- 상단 요약-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_box_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <!-- Card : 시즌승률-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cl_season_rate"
                android:layout_width="@dimen/md_120"
                android:layout_height="@dimen/md_170"
                app:cardCornerRadius="@dimen/md_2"
                app:cardElevation="@dimen/md_2"
                android:layout_marginEnd="@dimen/md_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:cardBackgroundColor="@color/orange_400"
                app:layout_constraintRight_toLeftOf="@id/cl_all_rate" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tv_season_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_30"
                        android:textAppearance="@style/StaticsBaseTextTop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.seasonRate}" />

                    <TextView
                        android:id="@+id/tv_season_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_5"
                        android:textAppearance="@style/StaticsBaseTextMid"
                        app:layout_constraintTop_toBottomOf="@id/tv_season_rate"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.seasonPlays}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_20"
                        android:textAppearance="@style/StaticsBaseTextBot"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/md_15"
                        android:text="@string/winning_rate_season" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card : 통산승률-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cl_all_rate"
                android:layout_width="@dimen/md_120"
                android:layout_height="@dimen/md_170"
                app:cardCornerRadius="@dimen/md_2"
                app:cardElevation="@dimen/md_2"
                app:cardBackgroundColor="@color/indigo_400"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_all_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_30"
                        android:textAppearance="@style/StaticsBaseTextTop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.allRate}" />

                    <TextView
                        android:id="@+id/tv_all_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_5"
                        android:textAppearance="@style/StaticsBaseTextMid"
                        app:layout_constraintTop_toBottomOf="@id/tv_all_rate"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.allPlays}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_20"
                        android:textAppearance="@style/StaticsBaseTextBot"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/md_15"
                        android:text="@string/winning_rate_total" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card : 직관횟수-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cl_count"
                android:layout_width="@dimen/md_120"
                android:layout_height="@dimen/md_170"
                android:layout_marginStart="@dimen/md_10"
                app:cardBackgroundColor="@color/green_500"
                app:cardCornerRadius="@dimen/md_2"
                app:cardElevation="@dimen/md_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/cl_all_rate" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_season_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_30"
                        android:textAppearance="@style/StaticsBaseTextTop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.seasonCount}" />

                    <TextView
                        android:id="@+id/tv_all_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_5"
                        android:textAppearance="@style/StaticsBaseTextMid"
                        app:layout_constraintTop_toBottomOf="@id/tv_season_count"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@{viewModel.allCount}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/md_20"
                        android:textAppearance="@style/StaticsBaseTextBot"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/md_15"
                        android:text="@string/watching_count" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 최근 5경기-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_box_recent_plays"
            android:layout_width="match_parent"
            android:layout_height="@dimen/md_0"
            android:layout_marginTop="@dimen/md_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_box_summary" >

            <TextView
                android:id="@+id/tv_recent_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@color/grey_700"
                android:textStyle="bold"
                android:textSize="@dimen/md_20"
                android:text="@string/recent_5plays" />

            <!-- 최근5경기 리스트-->
            <ListView
                android:id="@+id/lv_play_lists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_0"
                android:layout_marginTop="@dimen/md_8"
                android:background="@color/p_white_10"
                app:layout_constraintTop_toBottomOf="@id/tv_recent_label"
                app:layout_constraintBottom_toBottomOf="parent"
                android:listSelector="@android:color/transparent" />

            <!-- Empty-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_empty_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_0"
                android:background="@color/p_white_10"
                android:layout_marginTop="@dimen/md_8"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_recent_label"
                app:layout_constraintBottom_toBottomOf="parent" >

                <ImageView
                    android:id="@+id/iv_empty"
                    android:layout_width="@dimen/md_170"
                    android:layout_height="@dimen/md_170"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/md_50"
                    android:src="@drawable/ic_info_type_b" />

                <TextView
                    android:id="@+id/iv_empty_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/md_15"
                    android:text="@string/no_plays"
                    app:layout_constraintTop_toBottomOf="@id/iv_empty"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_700" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 로딩중-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/sk_loading"
                style="@style/SpinKitView.Large.ThreeBounce"
                android:layout_width="@dimen/md_40"
                android:layout_height="@dimen/md_40"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:SpinKit_Color="@color/red_400" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>